--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -36,8 +36,11 @@ jobs:
       - name: "test"
         env:
           BRANCH_NAME: ${{ fromJSON(steps.pull_request.outputs.data).head.ref }}
+          ENV: ${{ toJson(env) }}
         run: |
           echo "$BRANCH_NAME"
+          echo "===ENV==="
+          echo "$ENV"
   call_dist_firebase:
     needs: [get_branch_name]
     uses: ./.github/workflows/call_deploy_app_distribution.yml
