--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -16,14 +16,19 @@ jobs:
           BODY_JSON: ${{ toJson(github.event.comment.body) }}
         with:
           script: |
-            const {COMMENT, BODY_JSON} = process.env
-            console.log(BODY_JSON)
+            const {COMMENT, BODY_JSON, GITHUB_ENV} = process.env
+            console.log(GITHUB_ENV)
             COMMENT.split('\n').forEach(function (line) {
               const index = line.indexOf('=')
-              const left = line.substr(0, index)
-              const right = line.substr(index + 1, line.length)
-              
-              process.env[left] = JSON.stringify(right)
+              if(index > -1) {
+                const left = line.substr(0, index)
+                const right = line.substr(index + 1, line.length)
+                
+                const fs = require('fs');
+                fs.appendFile(GITHUB_ENV, 'left = ' + JSON.stringify(right), function (err) {
+                  if (err) throw err;
+                });
+              }
             }); 
       - uses: octokit/request-action@v2.x
         id: pull_request
