--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -16,6 +16,13 @@ jobs:
         with:
           script: |
             const {COMMENT, GITHUB_ENV} = process.env
+            console.log('========')
+            console.log(COMMENT.split('\r\n'))
+            console.log('========')
+            console.log(COMMENT.split('\n'))
+            console.log('========')
+            console.log(COMMENT.split('\r'))
+            console.log('========')
             COMMENT.split('\r\n').forEach(function (line) {
               const index = line.indexOf('=')
               if(index > -1) {
