--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -23,7 +23,7 @@ jobs:
                 const right = line.substr(index + 1, line.length)
                 
                 const fs = require('fs');
-                fs.appendFile(GITHUB_ENV, left + '=' + JSON.stringify(right) + '\r\n', function (err) {
+                fs.appendFile(GITHUB_ENV, left + '=' + JSON.stringify(right) + '\n', function (err) {
                   if (err) throw err;
                 });
               }
