--- a/.github/workflows/dist_firebase_issue_comment.yml
+++ b/.github/workflows/dist_firebase_issue_comment.yml
@@ -52,4 +52,4 @@ jobs:
     with:
       BRANCH_NAME: ${{ needs.get_info.outputs.BRANCH_NAME }}
       COMMENT_URL: ${{ github.event.issue.issue_comment_url }}
-      FEATURE1: ${{ needs.get_info.outputs.FEATURE1 }}
+      FEATURE1: ${{ needs.get_info.outputs.FEATURE1 == 'true' }}
