--- a/.github/workflows/call_deploy_app_distribution.yml
+++ b/.github/workflows/call_deploy_app_distribution.yml
@@ -41,6 +41,10 @@ jobs:
           <td>Firebase Version</td>
           <td>hogehoge</td>
           </tr>
+          <tr>
+          <td>Branch</td>
+          <td>${{ inputs.BRANCH_NAME }}</td>
+          </tr>
           </table>
           EOS
           EOS2
