--- a/.github/workflows/dist_firebase_dispatch.yml
+++ b/.github/workflows/dist_firebase_dispatch.yml
@@ -10,7 +10,11 @@ on:
 
 jobs:
   call_dist_firebase:
-    uses: ./.github/workflows/call_deploy_app_distribution.yml
-    with:
-      BRANCH_NAME: ${{ github.ref_name }}
-      FEATURE1: ${{ inputs.FEATURE1 }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy_app_distribution
+        with:
+          BRANCH_NAME: ${{ github.ref_name }}
+          FEATURE1: ${{ inputs.FEATURE1 }}
+  
