--- a/.github/workflows/dist_firebase_dispatch.yml
+++ b/.github/workflows/dist_firebase_dispatch.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: .github/actions/deploy_app_distribution
+      - uses: ./.github/actions/deploy_app_distribution
         with:
           BRANCH_NAME: ${{ github.ref_name }}
           FEATURE1: ${{ inputs.FEATURE1 }}
