--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: "update"
-        if: ${{ github.event.inputs.IS_UPDATE_PATCH_VERSION == true }}
+        if: ${{ github.event.inputs.IS_UPDATE_PATCH_VERSION == "true" }}
         run: | 
           echo "IS_UPDATE_PATCH_VERSION"
