--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       IS_UPDATE_PATCH_VERSION:
+        name: "Update Pathch Version"
         default: true
         required: true
         type: boolean
