--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -8,6 +8,7 @@ on:
         required: true
         type: boolean
       IS_UPDATE_VERSION_CODE:
+        description: "Update Version Code"
         default: false
         required: true
         type: boolean
