--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -38,7 +38,11 @@ jobs:
           script: |
             const fs = require("fs");
             const file = fs.readFileSync("release_info/version.json", "utf8");
-            core.setOutput("version_info", file)
+            const jsonObject = JSON.parse(file);
+            jsonObject.PATCH_VERSION_NAME += 1;
+            fs.writeFileSync("release_info/version.json", Json.stringify(jsonObject));
+
+            core.setOutput("version_info",  fs.readFileSync("release_info/version.json", "utf8"));
       - name: "make pull request"
         run: |
           major='${{ fromJson(steps.version_info.outputs.version_info).MAJOR_VERSION_NAME }}'
