--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -41,7 +41,7 @@ jobs:
             console.log(file);
             const jsonObject = JSON.parse(file);
             jsonObject.PATCH_VERSION_NAME += 1;
-            fs.writeFileSync("release_info/version.json", Json.stringify(jsonObject));
+            fs.writeFileSync("release_info/version.json", JSON.stringify(jsonObject));
 
             core.setOutput("version_info",  fs.readFileSync("release_info/version.json", "utf8"));
       - name: "make pull request"
