--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -67,5 +67,5 @@ jobs:
           echo $minor
           echo $patch
           branchName="release/${major}.${minor}.${patch}"
-          git branch -d $branchName
+          git branch $branchName
           git switch $branchName
