--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -81,4 +81,4 @@ jobs:
           git commit -m "release ${major}.${minor}.${patch} v${versionCode}"
           git push --set-upstream origin $branchName
 
-          gh pr create --base master --title "release ${major}.${minor}.${patch} v${versionCode}"
+          gh pr create --base master --title "release ${major}.${minor}.${patch} v${versionCode}" --body "empty"
