--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -82,7 +82,8 @@ jobs:
           echo "==========commit========="
           git commit -m "release ${major}.${minor}.${patch} v${versionCode}"
 
+          echo "==========graph========="
           git log --graph
-          # git push --set-upstream origin $branchName
+          git push --set-upstream origin $branchName
 
-          # gh pr create --base master --title "release ${major}.${minor}.${patch} v${versionCode}" --body "empty"
+          gh pr create --base master --title "release ${major}.${minor}.${patch} v${versionCode}" --body "empty"
