--- a/.github/workflows/comment__main_pr.yml
+++ b/.github/workflows/comment__main_pr.yml
@@ -7,6 +7,8 @@ jobs:
     name: Assign author to PR
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          echo '${{ toJSON(github) }}'
       - name: comment
         uses: octokit/request-action@v2.x
         with:
